fix: sidebar overflow

--- a/src/renderer/components/MainWindow/Sidebar.module.less
+++ b/src/renderer/components/MainWindow/Sidebar.module.less
@@ -211,14 +211,15 @@
   > .pinnedList {
     padding-right: 0;
     overflow: overlay;
-    max-height: 312px;
-    flex: 1;
+    // max-height: 312px;
+    // flex: 1;
   }
 
   > .unpinnedList {
     padding-right: 0;
     overflow: overlay;
-    flex: 1;
+    // min-height: 156px;
+    // flex: 1;
   }
 }
 
